--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <div class="contact-wrapper">
                   <h3 class="h3 contact-title mb-2">Tel</h3>
                   <p>
-                    <a href="tel:0608538757" class="p contact-desc"
+                    <a href="tel:0653796652" class="p contact-desc"
                       >0653796652</a
                     >
                   </p>
@@ -429,8 +429,8 @@
                 <div class="contact-wrapper">
                   <h3 class="h3 contact-title mb-2">E-mail</h3>
                   <p>
-                    <a href="mailto:bilaloxtan@gmail.com" class="p contact-desc"
-                      >anouarelyoussfi11@gmail.com</a
+                    <a href="mailto:anwarelyoussfi11@gmail.com" class="p contact-desc"
+                      >anwarelyoussfi11@gmail.com</a
                     >
                   </p>
                 </div>
